--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Momentum</title>
 </head>
+
 <body>
+    <form id="login-form">
+        <input required maxlength="15" type="text" placeholder="Enter your name">
+        <input type="submit" value="Log In" />
+    </form>
     <script src="app.js"></script>
 </body>
+
 </html>
