--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <input required maxlength="15" type="text" placeholder="Enter your name">
         <input type="submit" value="Log In" />
     </form>
+    <h1 id="greeting" class="hidden"></h1>
+    
     <script src="app.js"></script>
 </body>
 
