--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <input required maxlength="15" type="text" placeholder="Enter your name">
         <input type="submit" value="Log In" />
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    
     <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
 </body>
 
 </html>
